# dolfinx_mpc

./: .buildinfo  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CITATION.cff  Changelog.md  Dockerfile  README.md  _config.yml  _toc.yml  api.html  genindex.html  index.html  index.md  numba.html  objects.inv  py-modindex.html  references.bib  search.html  searchindex.js  sonar-project.properties  utils.html
.github/: sonarcloud.yml
.github/actions/install-dolfinx/: action.yaml
.github/workflows/: build_docs.yml  codeql.yml  deploy-pages.yml  docker.yml  sonarcloud.yml  test_mpc.yml
_modules/: index.html
_modules/dolfinx_mpc/: assemble_matrix.html  assemble_vector.html  multipointconstraint.html  problem.html
_modules/dolfinx_mpc/numba/: assemble_matrix.html  assemble_vector.html
_modules/dolfinx_mpc/utils/: mpc_utils.html  test.html
_sources/: numba.rst
cpp/: CMakeLists.txt  ContactConstraint.cpp  ContactConstraint.h  DOLFINX_MPCConfig.cmake.in  MultiPointConstraint.cpp  MultiPointConstraint.h  PeriodicConstraint.cpp  PeriodicConstraint.h  README.md  SlipConstraint.cpp  SlipConstraint.h  assemble_matrix.cpp  assemble_matrix.h  assemble_utils.cpp  assemble_utils.h  assemble_vector.cpp  assemble_vector.h  assembly.cpp  assembly.h  cell_maps.cpp  cell_maps.h  dolfinx_mpc.h  lifting.h  mpc_helpers.cpp  mpc_helpers.h  mpi_utils.cpp  mpi_utils.h  utils.cpp  utils.h
cpp/cmake/: dolfinx_mpc.pc.in
cpp/dolfinx_mpc/: CMakeLists.txt  DolfinxMPC.h.in  MultiPointConstraint.cpp  MultiPointConstraint.h  dolfinx_mpc.h
cpp/dolfinx_mpc/mpc/: CMakeLists.txt  dolfinx_mpc.h
cpp/test/: main.cpp
docker/: Dockerfile
docs/: Makefile  _config.yml  _toc.yml  api.rst  requirements.txt  utils.rst
docs/source/: conf.py  dolfinx_mpc.numba.rst  dolfinx_mpc.rst  dolfinx_mpc.utils.rst  index.rst  introduction.md  modules.rst
dolfinx-mpc/: CMakeLists.txt  main.cpp
dolfinx-mpc/cpp/: CMakeLists.txt  MultiPointConstraint.cpp  MultiPointConstraint.h  dolfinx_mpc.h
python/: .isort.cfg  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
python/benchmarks/: Makefile  bench_contact_3D.py  bench_edge_output.hdf5  bench_elasticity.py  bench_elasticity_edge.py  bench_periodic.py  collision.py  elasticity_one.hdf5  periodic_output.hdf5  post_proc.py  ref_elasticity.py  ref_periodic.py  visualize_iterations.py
python/debug/: bb_parallel.py  chris_mesh.py  contact_constraint.py  helpers_contact.py
python/debug/python_vs_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  python_dof_coords.py  test.c  test.h  test.ufl  test_cmap
python/demos/: Makefile  README_eigenproblem.md  compare.py  create_and_export_mesh.py  demo_contact_2D.py  demo_contact_3D.py  demo_eigenproblem.py  demo_eigenproblem_resonance.py  demo_elasticity.py  demo_elasticity_disconnect.py  demo_elasticity_disconnect_2D.py  demo_linear_wave_problem.py  demo_periodic.py  demo_periodic3d.py  demo_periodic3d_topological.py  demo_periodic_geometrical.py  demo_periodic_gep.py  demo_stokes.py  demo_stokes_nest.py  demo_stokes_nonlinear_nest.py  dolfin_mvc.h5  dolfin_mvc.xdmf  facet_mesh.h5  facet_mesh.xdmf  mesh.h5  mesh.xdmf  slipcondition.py  stokes.py  test_comm_neigh.py
python/demos/cubes/: create_and_export_mesh.py  cube_bench.py  cube_bench3d.py  helpers.py  rotated_cube.py  rotated_cube3D.py
python/demos/meshes/: facet_mesh.h5  facet_mesh.xdmf  mesh.h5  mesh.xdmf
python/dolfinx_mpc/: __init__.py  array.h  assemble_matrix.py  assemble_matrix_new.py  assemble_vector.py  assemble_vector_new.py  backsubstitution.py  backsubstitution_new.py  contactcondition.py  dictcondition.py  dolfinx_mpc.cpp  function.py  mpc.cpp  multipointconstraint.py  numba_setup.py  periodic_condition.py  problem.py  slipcondition.py
python/dolfinx_mpc/numba/: __init__.py  assemble_matrix.py  assemble_vector.py  helpers.py  numba_setup.py
python/dolfinx_mpc/utils/: __init__.py  io.py  mpc_io.py  mpc_utils.py  test.py  utils.py
python/dolfinx_mpc/wrappers/: __init__.py  mpc.cpp
python/src/dolfinx_mpc/: __init__.py  assemble_matrix.py  assemble_vector.py  dictcondition.py  dolfinx_mpc.cpp  mpc.cpp  multipointconstraint.py  problem.py
python/src/dolfinx_mpc/numba/: __init__.py  assemble_matrix.py  assemble_vector.py  helpers.py  numba_setup.py
python/src/dolfinx_mpc/utils/: __init__.py  mpc_utils.py  test.py
python/tests/: conftest.py  dolfin_custom_assembly.py  mwe123.py  nitsche_ufl.py  test_bcs.py  test_collision.py  test_collision_5.py  test_cube_contact.py  test_eigen_problem.py  test_integration_domains.py  test_lifting.py  test_linear_problem.py  test_matrix_assembly.py  test_mpc_lifting.py  test_mpc_pipeline.py  test_multispace_mpc.py  test_nonlinear_assembly.py  test_periodic.py  test_rectangular_assembly.py  test_stokes_channelflow.py  test_surface_integral.py  test_vector_assembly.py  test_vector_poisson.py
